Fix breakpoints on tablet

--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -6,8 +6,8 @@ p {
   line-height: 1.9;
 
   @include media('≤tablet') {
-    line-height: 1.6;
-    font-size: 0.9rem;
+    line-height: 1.75;
+    font-size: 1rem;
   }
 }
 
