--- a/sass/pages/_our-firm.scss
+++ b/sass/pages/_our-firm.scss
@@ -14,15 +14,15 @@
 
 .firm__section--top {
   display: grid;
-  grid-template-columns: 55% 45%;
+  grid-template-columns: 55% 40%;
   grid-column-gap: 5%;
   margin-bottom: 3rem;
 
   img {
-    height: 100%;
+    // height: 100%;
   }
 
-  @include media('<=tablet') {
+  @include media('<tablet') {
     display: block;
     margin-bottom: 1rem;
   }
@@ -34,7 +34,13 @@
 
   img {
     padding: 0;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
+    object-fit: contain;
+
+    @include media('<tablet') {
+      max-width: 160px;
+      margin: 0;
+    }
   }
 }
 
@@ -54,6 +60,10 @@
   .heading {
     padding-top: 3rem;
     padding-bottom: 3rem;
+
+    @include media('<tablet') {
+      padding: 2rem 0 0 0;
+    }
   }
 }
 
@@ -64,13 +74,23 @@
   .edge__middle & {
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
+
+  @include media('<tablet') {
+    display: block;
+  }
 }
+
 .edge__stat {
   display: flex;
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
   padding: 0 1rem;
+  text-align: center;
+
+  @include media('<tablet') {
+    margin: 2rem 0;
+  }
 
   h2 {
     color: $aegean;
@@ -80,6 +100,11 @@
     font-weight: 500;
     width: 80%;
     text-align: center;
+
+    @include media('<tablet') {
+      font-size: 1.5rem;
+      padding: 2rem 0 0 0;
+    }
   }
 
   h3 {
@@ -93,12 +118,23 @@
     line-height: 1.2;
     margin-bottom: 0;
 
+    @include media('<tablet') {
+      font-size: 2.5rem;
+    }
+
     span {
       font-family: $sans;
       text-transform: uppercase;
       font-size: 0.9rem;
       letter-spacing: $letter-spacing;
       font-weight: 700;
+    }
+  }
+}
+.edge__middle {
+  .edge__stat {
+    @include media('<tablet') {
+      margin: 4rem 0;
     }
   }
 }
@@ -110,10 +146,14 @@
     display: grid;
     grid-template-columns: 25% 70%;
     grid-column-gap: 5%;
-  }
 
-  @include media('<=desktop') {
-    display: block;
+    @include media('<tablet') {
+      display: block;
+
+      .fund__section__text {
+        margin-top: 1rem;
+      }
+    }
   }
 }
 
